@@ -48,4 +48,4 @@ field usually holds the number of years since 1900, this function provides the c
 .SH "RETURN VALUE"
 Both functions return FALSE on encountering an invalid value or year earlier than 1900, or TRUE if successful.
 .SH "SEE ALSO"
-.BR synce (1)
+.BR synce (7)
