@@ -56,4 +56,4 @@ is an invalid pointer,
 .BR SYNCE_CONF_DIR
 is not set and user cannot be determined, or the directory does not exist.
 .SH "SEE ALSO"
-.BR synce (1)
+.BR synce (7)
