@@ -97,6 +97,6 @@ The
 function returns a pointer to the allocated SynceInfo struct,
 or NULL if an error occured.
 .SH "SEE ALSO"
-.BR synce (1),
+.BR synce (7),
 .BR odccm (1),
 .BR vdccm (1)
