@@ -57,4 +57,4 @@ The
 function returns FALSE on encountering an invalid value,
 or TRUE if successful.
 .SH "SEE ALSO"
-.BR synce (1)
+.BR synce (7)
